# usp-projects

./: .gitignore  CMakeLists.txt
R/: Aula_pratica1.R
assembly/: .gitignore  bubble.asm  strcat.asm
assembly/linked_list/: README.md  main.asm
c/: CMakeLists.txt
c++/: competition.cpp
c++/advanced_algorithms/: CMakeLists.txt  run.py
c++/distributed/: .gitignore  CMakeLists.txt  collapse.cpp  main.cpp  matmul.c  matrixavgstd.c  matvec.c  matvec_sequential.c  sieve.cpp  test.c
c/eletronica_1/: fonte.c
c/icc_2/: main.c
icc_1/ascii_drawer/: main.c
icc_1/automatons/: automatons.c
icc_1/corrupted_book/: corrupted_book.c
icc_1/manhattan_delivery/: a  manhattan_delivery.c
icc_1/playlist_manager/: main.c
icc_1/song_manager/: playlist_manager.c
icc_2/labyrinth/: main.c
java/src/: EntradaTeclado.java  Ex1.java  Ex2.java  Ex3.java  Ex4.java  Ex4_1.java  Ex5.java  Ex6.java  Ex7.java  Ex8.java
java/word_count/: musica.txt
lab_icc_1/adding_surnames/: a  adding_surnames.c
lab_icc_1/attack_and_types/: main.c
lab_icc_1/change_coins/: change_coins.c
lab_icc_1/count_words/: count_words.c
lab_icc_1/image_padding/: main.c
lab_icc_1/interplanetary_time/: interplanetary_time.c
lab_icc_1/particle_simulation/: particle_simulation.c
lab_icc_1/polonese_notation/: main.c
lab_icc_1/statistic_functions/: statistic_functions.c
lab_icc_1/student_manager/: main.c
lab_icc_1/taboo_word/: main.c  taboo_word.c
logisim/: DE0-CV_ITA.circ  DE0_CV_Evolution.circ  rom
prolog/: bus.pl  exams.pl  family.pl
python/algelin/: Trab_final.ipynb  ex1.ipynb  ex1_gabarito.ipynb
python/cg/: .gitignore  Aula02-Ex08 - Extra - Gradiente.ipynb  Aula02.Ex01 - Minha primeira janela.ipynb  Aula02.Ex02 - Pontos.ipynb  Aula02.Ex03 - Linhas.ipynb  Aula02.Ex04 - TriГngulos.ipynb  Aula02.Ex05 - Quadrados.ipynb  Aula02.Ex06 - Cбrculos.ipynb  Aula02.Ex07 - Cores.ipynb  README.md  environment.yml  main.py  requirements.txt
python/numerical_calculus/: RAFAELZIMMER-12542612-2(0).ipynb  RAFAELZIMMER-12542612-2.ipynb  decomposicao_qr.ipynb  dircet.ipynb  exam1.ipynb  linear_system_direct.py  linear_system_iterative.py  mmq.ipynb  qr_francis.ipynb  script_04_nascimento_morte.ipynb  sistemas.ipynb  stochastic.ipynb
python/sa_twitter/: scrapping.ipynb
python/statistics/: AulaPratica1.ipynb  estatistica_projeto4_novo.ipynb  fraction.ipynb  fraction.py  gensim.py  lista3.ipynb  probability.ipynb  probability.py  project1.ipynb  project1.py  project4.ipynb  prova3.ipynb  simulado2.ipynb
usp_translate/: main.py
web/: 12542612.5028772.html
(+1681 files in other folders)
