project(usp)

add_executable(interplanetary_time lab_icc_1/interplanetary_time/interplanetary_time.c)
add_executable(change_coins lab_icc_1/change_coins/change_coins.c)
add_executable(manhattan_delivery icc_1/manhattan_delivery/manhattan_delivery.c)
add_executable(fonte12v3v eletronica_1/fonte.c)
add_executable(particle_simulation lab_icc_1/particle_simulation/particle_simulation.c)
add_executable(adding_surnames lab_icc_1/adding_surnames/adding_surnames.c)


target_link_libraries(manhattan_delivery m)
target_link_libraries(fonte12v3v m)